Signed-off-by: boogg <tchajagos@hotmail.com>

--- a/Strings and variables/Strings and variables.html
+++ b/Strings and variables/Strings and variables.html
@@ -22,7 +22,7 @@
 	var GrossPay=Hours*PayRate;
 	//output the result
 	document.write("<p>Paycheck = $"+GrossPay+"</p>");//Incantate variables with +
-	
+	document.write("<p>Paycheck = $",GrossPay,"</p>");//commas indicate seperate parameters
 	</script>
 
 </body>
