--- a/Hmwk/payCheckTable.html
+++ b/Hmwk/payCheckTable.html
@@ -1,8 +1,8 @@
 <script type="text/javascript">
  /*
  	Travis Hajagos
-	Sept 8th, 2014
-	Purpose: Investigate the branching constructs
+	Sept 28th, 2014
+	Purpose: Paycheck Table
 */
 	
 </script>
